# ping-qt

./: CMakeLists.txt  README.md  main.cpp  ping.cpp  ping.h  pingdialog.cpp  pingdialog.h  resources.qrc
include/: ping.h  pingdialog.h
source/: dialog.cpp  main.cpp  ping.cpp  pingdialog.cpp
